@@ -1,0 +1,3 @@
+#Build Number for ANT. Do not edit!
+#Mon Sep 22 20:01:26 GMT+01:00 2003
+build.number=23
