@@ -54,7 +54,7 @@
   <target depends="init" name="compile">
     <!-- Compile the java code from ${src} into ${classes} -->
     <echo>Compiling the application from ${src}</echo>
-    <javac deprecation="yes" destdir="${classes}" srcdir="${src}">
+    <javac deprecation="yes" destdir="${classes}" srcdir="${src}" debug="true">
        <classpath refid="jsmooth.class.path"/>
     </javac>
   </target>
@@ -100,7 +100,7 @@
 
   <target depends="compile" name="anttask">
     <!-- Compile the java code from ${src} into ${classes} -->
-    <javac deprecation="yes" destdir="${classes}" srcdir="${anttask-src}">
+    <javac deprecation="yes" destdir="${classes}" srcdir="${anttask-src}" debug="true">
        <classpath refid="anttask-compile.class.path"/>
     </javac>
     <unjar src="lib/jox116.jar" dest="${classes}"/>
@@ -239,11 +239,12 @@
         <arg value="consolewrapper.exe"/>
     </exec>
 
+    <!-- Builds the jsmooth executable -->
     <jsmoothgen project="jsprj/jsmoothgen.jsmooth" skeletonroot="${dist}/skeletons"/>
     <jsmoothgen project="jsprj/jsmoothcmd.jsmooth" skeletonroot="${dist}/skeletons"/>
 
     <copy todir="${dist}" file="jsmoothgen.exe"/>
-    <copy todir="${dist}" file="jsmoothgen-debug.exe"/>
+    <copy todir="${dist}" file="jsmoothcmd.exe"/>
     <copy todir="${dist}/sample">
       <fileset dir="sample"/>
     </copy>
